[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/RegionMapScene.gd" type="Script" id=1]
[ext_resource path="res://maps/regionmap/RegionMap.gd" type="Script" id=2]
[ext_resource path="res://terrain/terrain tiles.tres" type="TileSet" id=3]
[ext_resource path="res://creatures/orcs/orc.gd" type="Script" id=4]
[ext_resource path="res://creatures/orcs/orc_sprite.gd" type="Script" id=5]
[ext_resource path="res://creatures/orcs/orc_01.tres" type="Texture" id=6]

[node name="OrcTest" type="Node2D"]
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
z_index = 1
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="Area2D"]
texture = ExtResource( 6 )
script = ExtResource( 5 )

[node name="RegionMap" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 0, 0, 0, 0, 0, 0 )
format = 1
script = ExtResource( 2 )
